question-3/cka-net-q3.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cka-net-q3
spec: {}
status: {}
