question-3/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: backend
  name: backend-svc
  namespace: cka-net-q3
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: backend
status:
  loadBalancer: {}
